--- a/style.css
+++ b/style.css
@@ -5,3 +5,18 @@
     font-size: 2em;
     color: #ffeead;
   }
+  .container > div:nth-child(1n) {
+    background-color: #06d6a0;
+  }
+  
+  .container > div:nth-child(3n) {
+    background-color: #118ab2;
+  }
+  
+  .container > div:nth-child(2n) {
+    background-color: #ef476f;
+  }
+  
+  .container > div:nth-child(4n) {
+    background-color: #ffd166;
+  }
